[fix] new + route changes + swagger
