# routes/news.js
@@ -16,7 +16,7 @@ const {NewsPreview}         = require('../orm/models');
 module.exports = function (app) {
     app.post('/v2/site/news', securityForceFilter([{isVisible: true}]), getNews);
     app.post('/v2/site/new', securityForceFilter([{isVisible: true}]), getNew);
-    app.post('/v2/site/getNewsTags', securityForceFilter([{isVisible: true}]), getNewsTags);
+    app.post('/v2/site/tags', securityForceFilter([{isVisible: true}]), getNewsTags);
     app.put('/v2/site/new', adminAuth, saveNew);
     app.post('/v2/site/preview', adminAuth, previewNew);
     app.delete('/v2/site/new/:_id', adminAuth, deleteNew);
@@ -59,8 +59,9 @@ async function getNew(req, res, next) {
  */
 async function getNewsTags(req, res, next) {
     try {
-        const result = await servicesNews.getNewsTags(req.body.query, req.body.lang);
-        return res.json(result);
+        const {PostBody} = req.body;
+        const result     = await servicesNews.getNewsTags(PostBody.filter.tags, PostBody.filter.lang);
+        return res.json({datas: result});
     } catch (error) {
         return next(error);
     }
